bug 670277 - Fix WARNING: NS_ENSURE_TRUE(mState == STATE_TRANSFERRING) r=biesi